chore: fix rebar config

--- a/rebar.config
+++ b/rebar.config
@@ -24,7 +24,8 @@
 
 {post_hooks, [
     {"(linux|darwin|solaris)", compile, "cp native/elmdb_nif/target/release/libelm* priv/"},
-    {"win32", compile, "copy native\\elmdb_nif\\target\\release\\elm*.dll priv\\"}
+    {"win32", compile, "copy native\\elmdb_nif\\target\\release\\elm*.dll priv\\"},
+    { compile, "cp priv/crates/elmdb_nif/elmdb_nif.so priv/elmdb_nif.so 2>/dev/null || true" }
 ]}.
 
 {pre_hooks, [
