--- a/rebar.config
+++ b/rebar.config
@@ -7,8 +7,13 @@
 {deps, []}.
 
 %% Plugins
-{plugins, [
-    {rebar3_cargo, "0.1.1"}
+{plugins, [rebar3_rustler]}.
+
+
+%% Cargo configuration
+{cargo_opts, [
+    {src_dir, "native/elmdb_nif"},
+    {cargo_args, ["--release"]}
 ]}.
 
 %% Build hooks
@@ -19,31 +24,6 @@
     {post, [
         {clean, {cargo, clean}}
     ]}
-]}.
-
-%% Cargo configuration
-{cargo_opts, [
-    {src_dir, "native/elmdb_nif"},
-    {cargo_args, ["--release"]}
-]}.
-
-%% Pre/Post compile hooks
-{pre_hooks, [
-    {compile, "mkdir -p priv/"}
-]}.
-
-{post_hooks, [
-    {"(linux|darwin|solaris|freebsd)", compile, 
-     "sh -c 'find native/elmdb_nif/target -name \"libelmdb_nif.*\" -type f ! -path \"*/deps/*\" | head -1 | xargs -I {} cp {} priv/ && "
-     "cd priv && "
-     "for ext in so dylib; do "
-     "  if [ -f libelmdb_nif.$ext ]; then "
-     "    ln -sf libelmdb_nif.$ext elmdb_nif.so 2>/dev/null || true; "
-     "    ln -sf libelmdb_nif.$ext libelmdb_nif.so 2>/dev/null || true; "
-     "  fi; "
-     "done'"},
-    {"win32", compile, 
-     "powershell -Command \"Copy-Item -Path 'native\\elmdb_nif\\target\\release\\elmdb_nif.dll' -Destination 'priv\\' -Force\""}
 ]}.
 
 %% Test configuration
@@ -63,7 +43,7 @@
 ]}.
 
 %% Coverage analysis
-{cover_enabled, true}.
+{cover_enabled, false}.
 {cover_opts, [verbose]}.
 
 %% Profiles for different build configurations
